<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/concepts_list_view_item_link"
        android:icon="@drawable/link_icon"
        android:title="@string/link"
        app:showAsAction="always" />

    <item
        android:id="@+id/concepts_list_view_item_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/concepts_list_view_item_export"
        android:title="@string/export"
        android:icon="@drawable/export_icon"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/concepts_list_view_item_add"
        android:icon="@drawable/add_icon"
        android:title="@string/add"
        app:showAsAction="always" />

</menu>