<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".ui.LaunchActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/launch_logo_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_logo_text"
            android:textAlignment="center"
            android:textSize="80dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/launch_profiles_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="250dp"
            android:padding="30dp"
            android:text="@string/profile_button_text" />

        <Button
            android:id="@+id/launch_concepts_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minWidth="250dp"
            android:padding="30dp"
            android:text="@string/concepts_button_text" />

        <Button
            android:id="@+id/launch_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:minWidth="250dp"
            android:padding="25dp"
            android:text="@string/concepts_settings_text" />

    </LinearLayout>

</LinearLayout>