<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11">


    <ListView
        android:id="@+id/fragment_cours_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"></ListView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/fragment_cours_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fragment_cours_radiobutton_level_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/fragment_cours_level_1_name" />


            <RadioButton
                android:id="@+id/fragment_cours_radiobutton_level_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/fragment_cours_level_2_name" />


            <RadioButton
                android:id="@+id/fragment_cours_radiobutton_level_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/fragment_cours_level_3_name" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_cours_button_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingTop="5dp"
            android:text="Lancer l'apprentissage" />

    </LinearLayout>

</LinearLayout>