<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/what_is_this"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/unknown_file_found_message"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/dialog_link_file_filename_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/dialog_link_file_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <AutoCompleteTextView
                android:id="@+id/dialog_link_file_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/concept_autocompletion_hint"
                android:lines="1"
                android:maxLines="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_link_file_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="#a10505" />


        <RadioGroup
            android:id="@+id/dialog_link_file_level_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/dialog_link_file_level_radio_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="Photo" />

            <RadioButton
                android:id="@+id/dialog_link_file_level_radio_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Image" />

            <RadioButton
                android:id="@+id/dialog_link_file_level_radio_pictogram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:checked="true"
                android:text="Pictogramme" />

        </RadioGroup>


        <LinearLayout
            android:id="@+id/dialog_link_file_voice_type_radiogroup_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>
</ScrollView>