<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!--Dummy view to catch focus-->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/edit_concept_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/edit_concept_dialog_title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:weightSum="3">

            <EditText
                android:id="@+id/edit_concept_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:hint="Nom du concept"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:text="Resources visuelles"
                android:textSize="25sp"
                android:textStyle="bold" />

            <me.cendre.locutusandroid.ui.ConceptPicker
                android:id="@+id/concept_picker_picker_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:level="0" />

            <me.cendre.locutusandroid.ui.ConceptPicker
                android:id="@+id/concept_picker_picker_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:level="1" />

            <me.cendre.locutusandroid.ui.ConceptPicker
                android:id="@+id/concept_picker_picker_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:level="2" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:text="@string/voices"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/edit_concept_voices_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/edit" />

            <!--<me.cendre.locutusandroid.ui.NonScrollListView
                android:id="@+id/edit_concept_voices_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"> </me.cendre.locutusandroid.ui.NonScrollListView>-->

        </RelativeLayout>

        <Button
            android:id="@+id/edit_concept_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@null"
            android:textColor="@color/red"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>